# drbnatell

./: .gitignore  Dockerfile  LICENSE  README.md  aerich.ini  db.py  docker-compose.yaml  main.py  pyproject.toml
db/: schema.sql
db/migrations/: 20260320214437_create_tells.sql
migrations/models/: 0_20211214195642_init.sql  1_20211215075931_add_has_image.sql  2_20220216070828_add_has_video.sql
models/: tells.py
static/: main.css  main.js  main_20220227.css  sw.js
templates/: admin.html  home.html  page.html  sent.html
