[tool.poetry]
name = "Drbnatell"
version = "0.1.0"
description = ""
authors = ["Michal JanoÄko <michal@janocko.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = { extras = ["all"], version = "^0.70.0" }
tortoise-orm = { extras = ["asyncpg"], version = "^0.17.8" }
Jinja2 = "^3.0.3"
python-multipart = "^0.0.5"
Pillow = "^9.0.0"
aiofiles = "^0.8.0"
pilmoji = "^2.0.1"
python-dotenv = "^0.19.2"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
aerich = "^0.5.8"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
